[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-security-kit"
version = "0.1.0"
description = "Production security middleware for MCP servers"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "BeyondIT", email = "security@beyondit.blog"}]
keywords = ["mcp", "security", "middleware", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/codeverseproo/mcp-security-kit"
Repository = "https://github.com/codeverseproo/mcp-security-kit"